Fix issues with storage classes

--- a/packages/opni/opni/charts/templates/rbac.yaml
+++ b/packages/opni/opni/charts/templates/rbac.yaml
@@ -1167,6 +1167,8 @@ rules:
   resources:
   - storageclasses
   verbs:
+  - get
+  - list
   - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
