various bugfixes; agent v2 chart support work in progress; re-organize cli commands

--- a/packages/opni-agent/opni-agent/charts/templates/prometheus-agent.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/prometheus-agent.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.agent.version "v1" }}
 {{- if (and .Values.metrics.prometheusAgent.enabled .Values.metrics.enabled) }}
 apiVersion: monitoring.coreos.com/v1
 kind: Prometheus
@@ -69,5 +70,6 @@ subjects:
     name: opni-prometheus-agent
     namespace: {{ include "opni-agent.namespace" . }}
 {{- end }}
-
 {{- end }}
+{{- end }}
+
