--- a/packages/opni-agent/opni-agent/charts/templates/certs.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/certs.yaml
@@ -1,5 +1,5 @@
 {{- $namespace := printf "%s" (include "opni-agent.namespace" .) }}
-{{- if .Values.logging.enabled }}
+{{- if or .Values.logging.enabled .Values.agent.version "v2" }}
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
