--- a/packages/opni-agent/opni-agent/charts/templates/job.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/job.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.agent.version "v1" }}
 {{- $versionTag := printf "v%s" .Chart.AppVersion }}
 {{- if (and .Values.logging.enabled (not .Values.logging.disableBootstrap)) }}
 apiVersion: batch/v1
@@ -46,4 +47,5 @@ spec:
         {{- end }}
       restartPolicy: Never
   backoffLimit: 3
+{{- end }}
 {{- end }}
