--- a/packages/opni-agent/opni-agent/charts/values.yaml
+++ b/packages/opni-agent/opni-agent/charts/values.yaml
@@ -2,12 +2,17 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+agent:
+  # agent version: "v1" or "v2"
+  version: v1
+
 image:
   repository: rancher/opni
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
   pullPolicy: Always
 
+# v1 only
 metrics:
   enabled: false
   insecure: false
@@ -15,6 +20,7 @@ metrics:
     enabled: true
     rbac: true
 
+# v1 only
 logging:
   enabled: false
   insecure: false
@@ -24,6 +30,7 @@ logging:
   provider: rke
   jobTTL: 0
 
+# v1 only
 events:
   enabled: true
 
