--- a/packages/opni-agent/opni-agent/charts/templates/rbac_v1.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/rbac_v1.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.agent.version "v1" }}
 {{- $namespace := printf "%s" (include "opni-agent.namespace" .) }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -9,13 +10,8 @@ rules:
 - apiGroups:
   - monitoring.coreos.com
   resources:
-  - alertmanagerconfigs
-  - alertmanagers
-  - probes
-  - prometheuses
-  - prometheusrules
+  - prometheusrule
   - servicemonitors
-  - thanosrulers
   verbs:
   - create
   - get
@@ -24,9 +20,6 @@ rules:
   - update
   - watch
 - apiGroups:
-  - opni.io
-  - core.opni.io
-  - logging.opni.io
   - monitoring.opni.io
   resources:
   - "*"
@@ -39,11 +32,60 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - ""
+    - ""
   resources:
-  - namespaces
+    - namespaces
+  verbs:
+    - get
+- apiGroups:
+    - "monitoring.coreos.com"
+  resources:
+    - prometheusrules
+  verbs:
+    - get
+    - list
+    - watch
+- apiGroups:
+  - opni.io
+  resources:
+  - datapreppers/finalizers
+  - logadapters/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - datapreppers/status
+  - logadapters/status
   verbs:
   - get
+  - patch
+  - update
+- apiGroups:
+  - logging.opni.io
+  resources:
+  - '*'
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+    - opni.io
+  resources:
+    - logadapters
+    - datapreppers
+  verbs:
+    - get
+    - list
+    - watch
+    - create
+    - update
+    - patch
+    - delete
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
@@ -550,3 +592,4 @@ metadata:
   namespace: {{ $namespace }}
   labels:
     {{- include "opni-agent.labels" . | nindent 4 }}
+{{- end }}
