--- a/packages/opni/opni/charts/templates/deployment.yaml
+++ b/packages/opni/opni/charts/templates/deployment.yaml
@@ -41,6 +41,10 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+          - name: OPERATOR_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
           - name: NODE_FEATURE_DISCOVERY_IMAGE
             value: k8s.gcr.io/nfd/node-feature-discovery:v0.7.0
           args:
