--- a/packages/opni-agent/opni-agent/charts/templates/rbac_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/rbac_v2.yaml
@@ -176,6 +176,14 @@ rules:
   - "*"
   verbs:
   - "*"
+- apiGroups:
+  - opensearch.opster.io
+  resources:
+  - opensearchclusters
+  verbs:
+  - get
+  - list
+  - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
