--- a/packages/opni-agent/opni-agent/charts/templates/statefulset_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/statefulset_v2.yaml
@@ -12,6 +12,7 @@ spec:
   selector:
     matchLabels:
       {{- include "opni-agent.selectorLabels" . | nindent 6 }}
+  serviceName: opni-agent
   template:
     metadata:
       {{- with .Values.podAnnotations }}
