--- a/packages/opni-agent/opni-agent/package.yaml
+++ b/packages/opni-agent/opni-agent/package.yaml
@@ -7,4 +7,4 @@ additionalCharts:
   crdOptions:
     templateDirectory: crd-template
     crdDirectory: templates
-    addCRDValidationToMainChart: true
+    addCRDValidationToMainChart: false
