--- a/packages/opni/opni/charts/Chart.yaml
+++ b/packages/opni/opni/charts/Chart.yaml
@@ -7,6 +7,9 @@ annotations:
 apiVersion: v2
 appVersion: 0.5.4
 dependencies:
+- condition: opni-agent.enabled
+  name: opni-agent
+  repository: file://./charts/opni-agent
 - condition: opni-prometheus-crd.enabled
   name: opni-prometheus-crd
   repository: file://./charts/opni-prometheus-crd
