Introduce various build tags and ci options to allow building a minimal version of the opni binary suitable for running an agent, without extra features or plugins.

--- a/packages/opni-agent/opni-agent/charts/templates/statefulset_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/statefulset_v2.yaml
@@ -1,5 +1,5 @@
 {{- if eq .Values.agent.version "v2" }}
-{{- $versionTag := printf "v%s" .Chart.AppVersion }}
+{{- $versionTag := printf "v%s-minimal" .Chart.AppVersion }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
