Update values again

--- a/packages/opni-agent/opni-agent/charts/templates/deployment_v1.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/deployment_v1.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.agent.version "v1" }}
+{{- if or (eq .Values.agent.version "v1") .Values.logging.enabled }}
 {{- $versionTag := printf "v%s" .Chart.AppVersion }}
 apiVersion: apps/v1
 kind: Deployment
