fix cert name in agent chart; add periodic agent sync request timer; swap arguments in install/uninstall commands to allow installing or uninstalling capabilities in multiple clusters at once

--- a/packages/opni-agent/opni-agent/charts/templates/statefulset_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/statefulset_v2.yaml
@@ -107,7 +107,7 @@ spec:
         - name: cert
           secret:
             defaultMode: 420
-            secretName: webhook-server-cert
+            secretName: agent-webhook-server-cert
   volumeClaimTemplates:
     - metadata:
         name: plugins
