--- a/config/crd/bases/core.opni.io_gateways.yaml
+++ b/config/crd/bases/core.opni.io_gateways.yaml
@@ -1065,7 +1065,7 @@ spec:
                           type: object
                       type: object
                     type: array
-                  apiPort:
+                  clusterPort:omitempty:
                     default: 9094
                     type: integer
                   configName:
@@ -1073,6 +1073,8 @@ spec:
                     type: string
                   enabled:
                     type: boolean
+                  rawConfigMap:
+                    type: string
                   serviceType:
                     default: ClusterIP
                     type: string
@@ -1082,6 +1084,8 @@ spec:
                   webPort:
                     default: 9093
                     type: integer
+                required:
+                - clusterPort:omitempty
                 type: object
               auth:
                 properties:
