--- a/packages/opni/opni/charts/values.yaml
+++ b/packages/opni/opni/charts/values.yaml
@@ -41,6 +41,10 @@ gateway:
   extraVolumeMounts: []
   serviceAnnotations: {}
 
+  # Alerting
+  alerting:
+    enabled: false
+
 monitoring:
   enabled: false
   cortex:
