Fix typo in alerting struct tag

--- a/config/crd/bases/opni.io_gateways.yaml
+++ b/config/crd/bases/opni.io_gateways.yaml
@@ -1065,7 +1065,7 @@ spec:
                           type: object
                       type: object
                     type: array
-                  clusterPort:omitempty:
+                  clusterPort:
                     default: 9094
                     type: integer
                   configName:
