--- a/config/crd/bases/core.opni.io_gateways.yaml
+++ b/config/crd/bases/core.opni.io_gateways.yaml
@@ -1065,7 +1065,7 @@ spec:
                           type: object
                       type: object
                     type: array
-                  clusterPort:omitempty:
+                  clusterPort:
                     default: 9094
                     type: integer
                   configName:
@@ -1084,8 +1084,6 @@ spec:
                   webPort:
                     default: 9093
                     type: integer
-                required:
-                - clusterPort:omitempty
                 type: object
               auth:
                 properties:
