Add config for nats to opensearch

--- a/config/crd/bases/logging.opni.io_opniopensearches.yaml
+++ b/config/crd/bases/logging.opni.io_opniopensearches.yaml
@@ -40,6 +40,11 @@ spec:
                 type: string
               indexRetention:
                 type: string
+              natsCluster:
+                properties:
+                  name:
+                    type: string
+                type: object
               opensearch:
                 properties:
                   dashboards:
