--- a/packages/opni/opni/charts/templates/nats.yaml
+++ b/packages/opni/opni/charts/templates/nats.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.opni.io/v1beta1
 kind: NatsCluster
 metadata:
-  name: {{ include "opni.fullname" . }}
+  name: opni
   namespace: {{ include "opni.namespace" . }}
 spec:
   replicas: 3
