Fix agent issues

--- a/packages/opni-agent/opni-agent/charts/templates/webhooks.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/webhooks.yaml
@@ -1,6 +1,6 @@
 {{- $namespace := printf "%s" (include "opni-agent.namespace" .) }}
 {{- if not .Values.bootstrapInCluster.enabled -}}
-{{- if (or (eq .Values.agent.version "v2") .Values.logging.enabled ) }}
+{{- if .Values.logging.enabled }}
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
