--- a/packages/opni-agent/opni-agent/charts/templates/rbac_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/rbac_v2.yaml
@@ -15,6 +15,8 @@ rules:
   - namespaces
   verbs:
   - get
+  - list
+  - watch
 - apiGroups:
   - ""
   resources:
@@ -47,6 +49,13 @@ rules:
   - statefulsets
   - statefulsets/finalizers
   - statefulsets/status
+  - replicasets
+  verbs:
+  - "*"
+- apiGroups:
+  - ""
+  resources:
+  - pods
   verbs:
   - "*"
 - apiGroups:
@@ -63,6 +72,16 @@ rules:
   - persistentvolumeclaims
   verbs:
   - "*"
+- apiGroups:
+  - policy
+  resources:
+  - podsecuritypolicies
+  verbs:
+  - create
+  - use
+  - get
+  - list
+  - watch
 
 # prometheus resources
 - apiGroups:
