Add cortex retention limit config; update limits for ingester and querier

--- a/config/crd/bases/core.opni.io_monitoringclusters.yaml
+++ b/config/crd/bases/core.opni.io_monitoringclusters.yaml
@@ -193,6 +193,15 @@ spec:
                           serviceAccount:
                             type: string
                         type: object
+                      retentionPeriod:
+                        properties:
+                          nanos:
+                            format: int32
+                            type: integer
+                          seconds:
+                            format: int64
+                            type: integer
+                        type: object
                       s3:
                         properties:
                           accessKeyID:
