--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,11 +2,11 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-#- logging/logging.opni.io_clusterflows.yaml
-#- logging/logging.opni.io_clusteroutputs.yaml
-#- logging/logging.opni.io_flows.yaml
-#- logging/logging.opni.io_loggings.yaml
-#- logging/logging.opni.io_outputs.yaml
+- logging/logging.opni.io_clusterflows.yaml
+- logging/logging.opni.io_clusteroutputs.yaml
+- logging/logging.opni.io_flows.yaml
+- logging/logging.opni.io_loggings.yaml
+- logging/logging.opni.io_outputs.yaml
 - nvidia/nvidia.opni.io_clusterpolicies.yaml
 - nfd/nfd.opni.io_nodefeaturediscoveries.yaml
 - opensearch/opensearch.opster.io_opensearchclusters.yaml
@@ -16,12 +16,12 @@ resources:
 - grafana/grafana.opni.io_grafanas.yaml
 - bases/opni.io_opniclusters.yaml
 - bases/opni.io_opniopensearches.yaml
-# - bases/opni.io_logadapters.yaml
+- bases/opni.io_logadapters.yaml
 - bases/demo.opni.io_opnidemoes.yaml
 - bases/opni.io_pretrainedmodels.yaml
 - bases/opni.io_gpupolicyadapters.yaml
 - bases/opni.io_loggingclusters.yaml
-#- bases/opni.io_datapreppers.yaml
+- bases/opni.io_datapreppers.yaml
 - bases/opni.io_multiclusterrolebindings.yaml
 - bases/opni.io_loggingclusterbindings.yaml
 - bases/opni.io_multiclusterusers.yaml
@@ -33,8 +33,8 @@ resources:
 - bases/core.opni.io_loggingclusters.yaml
 - bases/core.opni.io_monitoringclusters.yaml
 - bases/core.opni.io_natsclusters.yaml
-#- bases/logging.opni.io_datapreppers.yaml
-#- bases/logging.opni.io_logadapters.yaml
+- bases/logging.opni.io_datapreppers.yaml
+- bases/logging.opni.io_logadapters.yaml
 - bases/logging.opni.io_loggingclusterbindings.yaml
 - bases/logging.opni.io_multiclusterrolebindings.yaml
 - bases/logging.opni.io_multiclusterusers.yaml
@@ -49,19 +49,19 @@ resources:
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-- patches/webhook_in_opniclusters.yaml
+#- patches/webhook_in_opniclusters.yaml
 # - patches/webhook_in_opnidemoes.yaml
 #- patches/webhook_in_logadapters.yaml
-- patches/webhook_in_pretrainedmodels.yaml
+#- patches/webhook_in_pretrainedmodels.yaml
 - patches/webhook_in_gpupolicyadapters.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-- patches/cainjection_in_opniclusters.yaml
+#- patches/cainjection_in_opniclusters.yaml
 #- patches/cainjection_in_opnidemoes.yaml
 #- patches/cainjection_in_logadapters.yaml
-- patches/cainjection_in_pretrainedmodels.yaml
+#- patches/cainjection_in_pretrainedmodels.yaml
 - patches/cainjection_in_gpupolicyadapters.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
