--- a/packages/opni/opni/charts/Chart.yaml
+++ b/packages/opni/opni/charts/Chart.yaml
@@ -5,7 +5,7 @@ annotations:
   catalog.rancher.io/namespace: opni-cluster-system
   catalog.rancher.io/release-name: opni
 apiVersion: v2
-appVersion: 0.6.0-rc2
+appVersion: 0.6.0-rc3
 dependencies:
 - condition: opni-agent.kube-prometheus-stack.enabled
   name: kube-prometheus-stack
@@ -16,7 +16,7 @@ dependencies:
 - condition: opni-prometheus-crd.enabled
   name: opni-prometheus-crd
   repository: file://./charts/opni-prometheus-crd
-description: Multi-cluster Monitoring and Logging System
+description: Multi Cluster Observability with AIOps
 icon: https://raw.githubusercontent.com/rancher/opni-docs/main/docs/assets/icon-opni.svg
 keywords:
 - opni
@@ -31,4 +31,4 @@ maintainers:
   name: Dan Bason
 name: opni
 type: application
-version: 0.6.0-rc2
+version: 0.6.0-rc3
