Fix most of the dynamic routing cases in the API

--- a/config/crd/bases/core.opni.io_gateways.yaml
+++ b/config/crd/bases/core.opni.io_gateways.yaml
@@ -1089,6 +1089,8 @@ spec:
                     type: string
                   rawConfigMap:
                     type: string
+                  rawInternalRouting:
+                    type: string
                   replicas:
                     default: 1
                     format: int32
