consolidate metrics and pprof http handlers and configuration

--- a/config/crd/bases/core.opni.io_gateways.yaml
+++ b/config/crd/bases/core.opni.io_gateways.yaml
@@ -2040,11 +2040,9 @@ spec:
                 type: array
               profiling:
                 properties:
-                  enabled:
-                    type: boolean
-                  port:
-                    default: 8087
-                    type: integer
+                  path:
+                    default: /debug/pprof
+                    type: string
                 type: object
               serviceAnnotations:
                 additionalProperties:
