Add optional image override for opensearch

--- a/config/crd/bases/logging.opni.io_opniopensearches.yaml
+++ b/config/crd/bases/logging.opni.io_opniopensearches.yaml
@@ -614,6 +614,8 @@ spec:
                     - replicas
                     - version
                     type: object
+                  imageOverride:
+                    type: string
                   nodePools:
                     items:
                       properties:
