Generate updated crds

--- a/config/crd/bases/logging.opni.io_opniopensearches.yaml
+++ b/config/crd/bases/logging.opni.io_opniopensearches.yaml
@@ -1209,6 +1209,8 @@ spec:
                 type: array
               opensearchVersion:
                 type: string
+              passwordGenerated:
+                type: boolean
               state:
                 type: string
               version:
